tests/semantic/invalid/44_e_base_args_arity.hulk
type Person(first: String, last: String) {}
type K(f: String ) inherits Person(f) {}
